addressed last two outstanding comments

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -175,10 +175,12 @@ including:
 2. a small flipper length, but large bill length group, and
 3. a large  flipper and bill length group.
 
-It is interesting that we can use data visualization to uncover such patterns,
-but also leads to the questions of how might we find 
-these kind of grouping patterns automatically, 
-and how do we pick the number of groups or subtypes.
+Data visualization is a great tool to give us a rough sense for such patterns
+when we have a small number of variables. 
+But if we are to group data&mdash;and select the number of groups&mdash;as part of 
+a reproducible analysis, we need something a bit more automated.
+Additionally, finding groups via visualization becomes more difficult 
+as we increase the number of variables we consider when clustering.
 The way to rigorously separate the data into groups 
 is to use a clustering algorithm.
 In this chapter, we will focus on the *K-means* algorithm, 
@@ -673,9 +675,9 @@ penguin_clust_ks
 Then we use `rowwise` \index{rowwise} + `mutate` to apply the `kmeans` function 
 within each row to each K. 
 However, given that the `kmeans` function 
-returns a model object to us (not a vector)
+returns a model object to us (not a vector),
 we will need to store the results as a list columm.
-This can work because both vector and lists are legitimate 
+This works because both vectors and lists are legitimate 
 data structures for data frame columns. 
 To make this work, 
 we have to put each model object in a list using the `list` function.
