Address's minor issue and closes #247

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -115,13 +115,13 @@ year
 
 Table: (#tab:datatype-table) Basic data types in R
 
-| Data type | Description | Example |
-| ---       | ----------  |---------|
-| character | Letters or numbers surrounded by quotes | "1" , "Hello world!" |
-| double | Numbers with decimals values | 1.2333 |
-| integer | Numbers that do not contain decimals | 1L, 20L (where "L" tells R to store as an integer) |
-| logical | A value of true and false | `TRUE`, `FALSE` |
-| factor | Used to represent data with a limited number of values | a `color` variable with levels `red`, `green` and `orange` |
+| Data type | Abbreviation | Description | Example |
+| --------- | ------------ |------------ |---------|
+| character | chr | Letters or numbers surrounded by quotes | "1" , "Hello world!" |
+| double | dbl | Numbers with decimals values | 1.2333 |
+| integer | int | Numbers that do not contain decimals | 1L, 20L (where "L" tells R to store as an integer) |
+| logical | lgl | A value of true and false | `TRUE`, `FALSE` |
+| factor | fct | Used to represent data with a limited number of values | a `color` variable with levels `red`, `green` and `orange` |
 
 > Integer and double data types both fall under the class "Numeric".
 > Most of the time when working with numbers in R they will be double types. For
@@ -939,7 +939,7 @@ a technique called joins.
 We link to resources that discuss this in the Additional
 Resources section at the end of the chapter.
 
-## Creating a visualization with tidy data
+#### Creating a visualization with tidy data {-}
 
 Now that we have cleaned and wrangled our data, we can make visualizations or do 
 statistical analyses to answer questions about our data! Let's suppose we want to
@@ -1159,7 +1159,7 @@ and pipe that into more functions after that.
 
 ## Aggregating data with `summarize`
 
-### Calculating summary statistics on columns:
+### Calculating summary statistics on columns
 
 As a part of many data analyses, we need to calculate a summary value for the
 data (a *summary statistic*). 
@@ -1211,24 +1211,24 @@ primary language at home is spoken by
 `r format(lang_summary$max_most_at_home[1], scientific = FALSE, big.mark = ",")`
 people.
 
-#### Calculating summary statistics when there are NA's
+#### Calculating summary statistics when there are `NA`s {-}
 
 When we use base R statistical summary functions 
 (e.g., `max`, `mix`, `mean`, `sum`, etc) with `summarize`, 
 R will return to us `NA` when we apply functions to columns that 
-contain `NA`'ss in the data frame. 
+contain `NA`s in the data frame. 
 Usually that is not what we want to happen, 
-instead we'd usually like R to ignore the NA's 
+instead we'd usually like R to ignore the `NA`s 
 and calculate the summary statistic using all of the other values, 
-that are not `NA`'s, in the column.
+that are not `NA`s, in the column.
 
 How can we do that? 
 In this case of pairing base R statistical summary functions with `summarize`, 
-we can avoid getting R to return NA's by adding the argument `na.rm = TRUE` 
+we can avoid getting R to return `NA`s by adding the argument `na.rm = TRUE` 
 to the base R statistical summary function we are applying. 
 We show an example of this below.
 
-First we create a seemingly innocuous NA 
+First we create a seemingly innocuous `NA` 
 in the first row of the `region_lang` data frame, 
 in the `most_at_home column`:
 
@@ -1256,7 +1256,7 @@ summarize(region_lang_na,
           max_most_at_home = max(most_at_home, na.rm = TRUE))
 ```
 
-### Calculating summary statistics on columns for groups of rows:
+### Calculating summary statistics on columns for groups of rows
 
 A common pairing with `summarize` is `group_by`. Pairing these functions
 together can let you summarize values for subgroups within a data set,
@@ -1313,7 +1313,7 @@ First we will see how we can do this using `summarize` + `across`.
 Then we will also explore how we can use a more general iteration function, 
 `map`, to also accomplish this.
 
-#### `summarize` + `across` for calculating summary statistics on many columns
+#### `summarize` + `across` for calculating summary statistics on many columns {-}
 
 To summarize statistics across many columns, we can use the 
 `summarize` function we have just recently learned about.
@@ -1332,14 +1332,14 @@ region_lang |>
 ``` 
 
 > **Note on calculating summary statistics with `summarize` + `across`** 
-> **when there are NA's**:
+> **when there are `NA`s**:
 > 
 > Similarly to when we use base R statistical summary functions 
 > (e.g., `max`, `mix`, `mean`, `sum`, etc) with `summarize` alone, 
 > the use of the `summarize` + `across` functions paired 
 > with base R statistical summary functions
-> also return NA's when we apply them to columns that 
-> contain NAs in the data frame. 
+> also return `NA`s when we apply them to columns that 
+> contain `NA`s in the data frame. 
 > 
 > To avoid this, again we need to add the argument `na.rm = TRUE`,
 > but in this case we need to use it a little bit differently.
@@ -1352,7 +1352,7 @@ region_lang |>
 >   summarize(across(mother_tongue:lang_known, max, na.rm = TRUE))
 > ```
 
-#### `map` for calculating summary statistics on many columns
+#### `map` for calculating summary statistics on many columns {-}
 
 An alternative to `summarize` and `across` 
 for applying a function to many columns is the `map` family of functions.
@@ -1416,13 +1416,13 @@ region_lang |>
 Which `map` function you choose depends on what you want to do with the
 output; you don't always have to pick `map_dfc`!
 
-> **Note on calculating summary statistics with `map` when there are NA's**:
+> **Note on calculating summary statistics with `map` when there are `NA`s**:
 > 
 > Similarly to when we use base R statistical summary functions 
 > (e.g., `max`, `mix`, `mean`, `sum`, etc) with `summarize`, 
 > `map` functions paired with base R statistical summary functions
-> also return NA's when we apply them to columns that 
-> contain NAs in the data frame.
+> also return `NA`s when we apply them to columns that 
+> contain `NA`s in the data frame.
 > 
 > To avoid this, again we need to add the argument `na.rm = TRUE`.
 > When we use this with `map` we do this by adding a `,` 
