Removed super vectors and added note clarifying our nomenclature for the book:

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -133,8 +133,7 @@ Table: (#tab:datatype-table) Basic data types in R
 
 ### What is a list?
 
-Lists are also objects in R that have multiple, ordered elements, 
-you can think of them as super-vectors. 
+Lists are also objects in R that have multiple, ordered elements.
 Vectors and lists differ by the requirement of element type
 consistency. All elements within a single vector must be of the same type (e.g.,
 all elements are characters), whereas elements within a single list can be of
@@ -146,25 +145,16 @@ because lists can contain other lists.
 knitr::include_graphics("img/vec_vs_list/vec_vs_list.001.jpeg")
 ```
 
-> Note that there are actually two types of vectors in R: *atomic vectors* and
-> *lists*. Though when people say “vector”, they are *usually* referring to
-> atomic vectors. Confusing, we know! You can think of **atom**ic vectors as
-> the “atoms” of R since they are built from R’s most fundamental data types.
-
-
 ### What does this have to do with data frames?
 
-As mentioned earlier, 
-a data frame is a special type of object in R whose columns are vectors. 
-In particular, 
-a data frame is really a special subtype of list where the elements 
-can only be vectors, and the vectors must be of the same length. 
-Although the columns of a data frame can only be vectors, 
-and vector elements must be of the same data type, 
-not all columns in a data frame need to be of the same type. 
+A data frame is really a special subtype of list where the elements 
+must be either a vectors or a list, 
+and these elements must be of the same length. 
+Not all columns in a data frame need to be of the same type. 
 Figure \@ref(fig:02-dataframe) shows a data frame where
 the columns are vectors of different types, 
-but the elements are the same data type within each column. 
+but because the columns in this example are vectors, 
+the elements must be the same data type within each column. 
 Representing data with data frames enables us to work with our 
 data in a tabular manner easily. 
 It also allows us to have columns (containing qualities or values) 
@@ -179,6 +169,17 @@ along with each name rather than sorting the columns independently.
 ``` {r 02-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame and vector types", fig.retina = 2, out.width = "650pt"}
 knitr::include_graphics("img/dataframe/dataframe.001.jpeg")
 ```
+
+> **Note:** In this book we have chosen to use the term "vector" to refer to 
+> the data structure that is technically called an atomic vector 
+> (e.g. character, integer, double, logical, etc).
+> We have made this decision because this is how this data type 
+> is most commonly referred to by the R community.
+> Formally, vectors is an umbrella term that encompasses both atomic vector 
+> and list objects in R.
+> Confusing we know and agree!
+> We encourage readers who are enthusiastic to learn more 
+> to read the Vectors chapter of the Advanced R book [@wickham2019advanced].
 
 The functions from the `tidyverse` package that we are using often give us a
 special class of data frame called a *tibble*. Tibbles have some additional
@@ -800,8 +801,8 @@ However, suppose we didn't use the `convert` argument
 and needed to modify the column type some other way?
 Below we create such a situation 
 so that we can demonstrate how we can use `mutate`
-to change the column types of a dataframe. 
-`mutate` is a useful function to modify or create new dataframe columns.
+to change the column types of a data frame. 
+`mutate` is a useful function to modify or create new data frame columns.
 
 ``` {r warning=FALSE, message=FALSE}
 lang_messy <- read_csv("data/region_lang_top5_cities_messy.csv")
@@ -885,7 +886,7 @@ was English in the 2016 Canadian census was
 `r format(round(number_most_home/toronto_popn, 2), scientific = FALSE, big.mark = ",")`
 in Toronto.
 
-Let's now use `mutate` to create a new column in our dataframe 
+Let's now use `mutate` to create a new column in our data frame 
 that holds the proportion of people who speak English 
 for our five cities of focus in this chapter. 
 To accomplish this, we will need to do 2 tasks 
@@ -906,7 +907,7 @@ city_pops
 
 And next, we will filter the `official_langs` data frame 
 so that we only keep the rows where the language is English.
-We will name the new dataframe we get from this `english_langs`:
+We will name the new data frame we get from this `english_langs`:
 
 ```{r}
 english_langs <- filter(official_langs, language == "English")
@@ -928,7 +929,7 @@ english_langs
 
 > Note: one important thing about the computation that we did above was
 that we had to ensure that we ordered the `city_pops` vector in the
-same order as the cities were listed in the `english_langs` dataframe.
+same order as the cities were listed in the `english_langs` data frame.
 This is because R will perform the division computation we did by dividing 
 each element of the `most_at_home` column by each element of the 
 `city_pops` vector - matching them up by position.
@@ -1109,15 +1110,15 @@ For example, we can pipe together three functions to:
 
 - `filter` rows to include only those where the counts of the language most spoken at home are greater than 10,000, 
 - `select` only the columns corresponding to `region`, `language` and `most_at_home`, and
-- `arrange` the dataframe rows in order by counts of the language most spoken at home 
+- `arrange` the data frame rows in order by counts of the language most spoken at home 
 from smallest to largest.
 
 > **Note:** 
 > As we saw in Chapter \@ref(intro), 
 > we can use the `tidyverse` `arrange` function 
-> to order the rows in the dataframe by the values of one or more columns. 
+> to order the rows in the data frame by the values of one or more columns. 
 > Here we pass the column name `most_at_home` to arrange 
-> to order the dataframe rows by the values in that column, in ascending order.
+> to order the data frame rows by the values in that column, in ascending order.
 
 ``` {r}
 large_region_lang <- filter(tidy_lang, most_at_home > 10000) |>
@@ -1268,7 +1269,7 @@ image_read("img/summarize/summarize.002.jpeg") |>
 ```
 
 For example, 
-here, we can use `group_by` to group the regions of the `tidy_lang` dataframe
+here, we can use `group_by` to group the regions of the `tidy_lang` data frame
 and then calculate the minimum and maximum number of Canadians 
 reporting the language as the primary language at home 
 for each of the regions in the data set.
@@ -1505,7 +1506,7 @@ We will use the aptly named function `rowwise` in combination with `mutate`
 to accomplish this task. 
 
 Before we apply `rowwise` we will `select` only the count columns 
-so we can see all the columns in the dataframe's output easily in the book. 
+so we can see all the columns in the data frame's output easily in the book. 
 So for this demonstration, the data set we are operating on looks like this:
 
 ```{r}
