adding factor explanation to viz

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -126,10 +126,13 @@ Table: (#tab:datatype-table) Basic data types in R
 > Integer and double data types both fall under the class "Numeric".
 > Most of the time when working with numbers in R they will be double types. For
 > instance, a double data type is the default when you create a vector of
-> numbers using `c()`, and when you read in whole numbers via `read_csv`. There
-> are other basic data types in R, such as *raw* and *complex*, which we won't
-> cover in this textbook. We will go into more details about factors in Chapter
-> \@ref(viz).
+> numbers using `c()`, and when you read in whole numbers via `read_csv`. 
+> Factors help us represent categorical data. Factors can be ordered or 
+> unordered, and even though factors look like characters, they are integers
+> underneath. They contain a set of values, known as levels. 
+> Storing something as a factor helps ensure that R will treat the data correctly.
+> There are other basic data types in R, such as *raw* and *complex*, which we
+> won't cover in this textbook.
 
 ### What is a list?
 
