--- a/references.bib
+++ b/references.bib
@@ -217,3 +217,10 @@
   title = {What is Cancer?},
   url = {https://stanfordhealthcare.org/medical-conditions/cancer/cancer.html}
 }
+
+@book{wickham2019advanced,
+  title={Advanced r},
+  author={Wickham, Hadley},
+  year={2019},
+  publisher={chapman and hall/CRC}
+}
