Removed numbers from subtitlesas suggested by reviewer E in 104

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -36,7 +36,7 @@ By the end of the chapter, readers will be able to:
 - Use `ggsave` to save visualizations in `.png` and `.svg` format
 
 ## Choosing the visualization
-#### *Ask a question, and answer it*
+#### *Ask a question, and answer it* {-}
 
 The purpose of a visualization is to answer a question \index{question!visualization} about a data set of interest. So naturally, the first thing to do **before** creating a visualization is to formulate the question about the data you are trying to answer. 
 A good visualization will clearly answer your question without distraction; a *great* visualization will suggest even what the question
@@ -65,7 +65,7 @@ do not use tables to make numerical comparisons; humans are much better at quick
 
 
 ## Refining the visualization
-#### *Convey the message, minimize noise*
+#### *Convey the message, minimize noise* {-}
 
 Just being able to make a visualization in R with `ggplot2` (or any other tool for that matter) doesn't mean that it effectively communicates your message to others. Once you have selected a broad type of visualization to use, you will have to refine it to suit your particular need.
 Some rules of thumb for doing this are listed below. They generally fall into two classes: you want to *make your
@@ -91,7 +91,7 @@ making it easier for them to understand and remember your message quickly.
 
 
 ## Creating visualizations with `ggplot2` 
-#### *Build the visualization iteratively*
+#### *Build the visualization iteratively* {-}
 
 This section will cover examples of how to choose and refine a visualization given a data set and a question that you want to answer, 
 and then how to create the visualization in R \index{ggplot} using `ggplot2`.  To use the `ggplot2` package, we need to load the `tidyverse` metapackage.
@@ -595,7 +595,7 @@ admirable job given the technology available at the time.
 
 
 ## Explaining the visualization
-#### *Tell a story*
+#### *Tell a story* {-}
 
 Typically, your visualization will not be shown entirely on its own, but rather it will be part of a larger presentation.
 Further, visualizations can provide supporting information for any aspect of a presentation, from opening to conclusion.
@@ -641,7 +641,7 @@ worth further investigating the differences between these experiments to see why
 
 
 ## Saving the visualization
-#### *Choose the right output format for your needs*
+#### *Choose the right output format for your needs* {-}
 
 Just as there are many ways to store data sets, there are many ways to store visualizations and images.
 Which one you choose can depend on several factors, such as file size/type limitations 
